Implement ShiftOp for values (Bug 741202, r=dvander,jandem)